--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
        "version": 2,
        "framework": null,
        "functions": {
-         "api/index.php": { "runtime": "vercel-php@0.6.0" }
+         "api/index.php": { "runtime": "vercel-php@0.6.0" },
+         "api/yourFunction.js": { "runtime": "nodejs18.x" }
        },
        "routes": [
          {
